impact charcoal font

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     font-family: "Times New Roman", Times, serif;
   }
   h1, h2 {
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Impact','Charcoal', sans-serif;
   }
   img {
     margin-left: auto;
